hphp/test/zend/good/Zend/tests/errmsg_039.php.expectf

Fatal error: Cannot redeclare test::$var in %s/errmsg_039.php on line 5
